--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-MyOMDbApiKey="f1765675"
+MyTheMovieDBApiToken="c200166037099cde63a815b479b47549" 
 
